examples/test/testpolicy7528.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7528
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key6: value42
      key3: value42
      key48: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value0
      podSelector:
        matchLabels:
          key12: value5
          key31: value20
